<resources>
    <string name="app_name">QzinEat</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="host_event">Host an Event</string>
    <string name="all_hosted_event">Hosted Events</string>
    <string name="my_event">My Events</string>

    <string name="advance_filter">Advance Filter</string>
    <string name="profile">Profile</string>
    <string name="futurama">Futurama</string>
    <string name="nav_title">QzinEat</string>
    <string name="simpsorama">Simpsorama</string>
    <string name="example_event_title">Sample Event Title</string>
    <string name="example_place">San Francisco</string>
    <string name="drawer_event">Events</string>
    <string name="margin1">20dp</string>
    <string name="prompt">Choose</string>
    <string name="textHt">10dp</string>
    <string-array name="yesno_Array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="somthing_went_wrong">Something went wrong!! Please try again later!!</string>

    <string name="err_msg_required">Required</string>

    <!-- Drawer -->
    <string name="drawer_my_event">My Events</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_hosted_event">Hosted Events</string>

    <!-- Facebook -->
    <string name="facebook_app_id">557168641127416</string>


    <string name="title_update_profile">Update Profile</string>

    <string name="Edit">Edit</string>
    <string name="primary_search_hint">sushi, taco</string>
    <string name="location_search_hint">city, state or zip code</string>
    <string name="search_icon">search icon</string>
    <string name="sub_events">Subscribed Events</string>
    <string name="switch_search">Switch to Searching</string>
    <string name="switch_host">Switch to Hosting</string>
    <string name="hot_events">Hot Events</string>
    <string name="events">Events</string>
    <string name="filters">Filters</string>

    <!-- Login -->
    <string name="login_no_username_toast">Please enter your username</string>
    <string name="login_no_password_toast">Please enter your password</string>
    <string name="login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="login_failed_unknown_toast">Could not log in, please try again later</string>

    <string name="signup_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="signup_reenter_password_toast">Please re-enter your password</string>
    <string name="signup_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="signup_no_email_toast">Please enter your email</string>
    <string name="signup_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="signup_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="signup_no_name_toast">Please enter your name</string>
    <string name="signup_signup_failed_unknown_toast">Could not sign up, please try again later</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus, est non tristique dictum, justo erat fermentum purus, in finibus dui augue a nisi. Nulla vestibulum luctus rhoncus. Praesent orci ipsum, congue ac hendrerit sed, egestas nec tellus. Quisque sagittis, massa a ultrices auctor, justo odio blandit nisl, in varius ante purus eget justo. Nunc magna lacus, finibus non turpis ac, malesuada cursus turpis. Fusce et suscipit dolor, nec ultrices sem. Nam eleifend a lorem et dapibus. Etiam ornare est nulla, volutpat suscipit odio lacinia nec. Duis a quam quis nunc pharetra posuere eu ac odio. Aliquam sit amet volutpat odio, nec rutrum velit. Nulla volutpat, lectus a placerat suscipit, purus velit tempor ex, ut tempor dolor augue at est.</string>
    <string name="thanks">Thanks</string>
    <string name="next">Next</string>
    <string name="hello">hello</string>

    <string name="welcome_title">Welcome to QzinEat</string>
    <string name="welcome_msg">Find places to eat authentic food with friends and family.</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="save_event">Save</string>
    <string name="et_event_name">Event Name</string>
    <string name="et_price">Price</string>
    <string name="et_address">Address</string>
    <string name="hint_review_comment">Tell us more about this event</string>
</resources>
