<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_title"
      app:itemTextColor="@color/primary">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_drawer_login"
                android:title="@string/log_in"/>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_south_park"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_drawer_event"
                android:title="@string/drawer_event"
                android:checked="true"/>

            <item
                android:id="@+id/nav_my_event"
                android:icon="@drawable/ic_simpsons"
                android:title="My Events" />

            <item
                android:id="@+id/nav_host_event"
                android:icon="@drawable/ic_simpsons"
                android:title="@string/host_event" />

            <item
                android:id="@+id/nav_advance_filter"
                android:icon="@drawable/ic_south_park"
                android:title="@string/advance_filter" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_drawer_login"
                android:title="@string/log_out"/>

        </menu>
    </item>

</menu>

