<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        card_view:cardBackgroundColor="#fff">
        <!--cardview:cardElevation="4dp"
                cardview:cardCornerRadius="5dp"-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:id="@+id/rl"
        >

        <ImageView
            android:layout_width="@dimen/user_list_image_margin"
            android:layout_height="@dimen/user_list_image_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxWidth="@dimen/user_list_image_margin"
            android:maxHeight="@dimen/user_list_image_margin"
            android:minWidth="@dimen/user_list_image_margin"
            android:minHeight="@dimen/user_list_image_margin"
            android:id="@+id/ivEventImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_event_title"
            style="@style/UserListTitleStyle"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="85dp"
            android:id="@+id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxWidth="220dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/example_event_title"
            style="@style/UserListDateStyle"
            android:id="@+id/tvDate" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_place"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="85dp"
            android:layout_below="@id/tvTitle"
            style="@style/UserListLocationStyle"
            android:id="@+id/tvCity" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/edit_pencil"
            android:id="@+id/evEdit"
            android:layout_below="@id/tvDate"
           />

    </RelativeLayout>

        <View
            android:id="@+id/vwLine"
            android:layout_width="match_parent"
            android:layout_below="@id/rl"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_alignParentBottom="true"/>

    </android.support.v7.widget.CardView>
</LinearLayout>