<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:gravity="start">

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:layout_gravity="center_vertical"
        >
        <ImageButton
            android:id="@+id/ibListView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_format_list_numbers"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <ImageButton
            android:id="@+id/ibMapView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_google_maps_search"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/llSearch1"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_et_search"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/search_icon"/>

            <EditText
                android:id="@+id/etSearch1"
                android:layout_width="@dimen/search_edit_size"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/primary_search_hint"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:textCursorDrawable="@null"
                style="?searchEditText"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/ivSearchClear1"
                android:src="@drawable/ic_close_white"
                android:layout_gravity="center_vertical"
                android:visibility="invisible"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/llSearch2"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_et_search"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/search_icon"/>

            <EditText
                android:id="@+id/etSearch2"
                android:layout_width="@dimen/search_edit_size"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/location_search_hint"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:textCursorDrawable="@null"
                style="?searchEditText"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/ivSearchClear2"
                android:src="@drawable/ic_close_white"
                android:layout_gravity="center_vertical"
                android:visibility="invisible"
                />
        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/btnSearchContent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_search_btn"
        android:layout_gravity="left"
        />

</LinearLayout>